040 - Desafio lançando exceptions de granularidade fina